node version!  up and running

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Node Cellar</title>
+    <title>CBT App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -87,7 +87,7 @@
             <a href="http://expressjs.com/">Express</a>, and
         <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>,
         by <a href="http://coenraets.org" target="_blank">Christophe Coenraets</a>.<br/>
-        The source code for this application is available in <a href="#">this repository</a> on GitHub.</p>
+        The source code for this application is available in <a href="">this repository</a> on GitHub.</p>
     </footer>
 
 </div>
