--- a/public/tpl/IncidentView.html
+++ b/public/tpl/IncidentView.html
@@ -20,7 +20,7 @@
                     </div>
 
                     <div class="control-group">
-                        <label for="description" class="control-label">Notes:</label>
+                        <label for="description" class="control-label">Description:</label>
 
                         <div class="controls">
                             <textarea id="description" name="description" style="width: 90%;" rows="6"><%= description
