--- a/public/tpl/HeaderView.html
+++ b/public/tpl/HeaderView.html
@@ -6,12 +6,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="#">CBT</a>
+            <a class="brand home-menu" href="#">CBT</a>
 
             <div class="nav-collapse collapse">
 
                 <ul class="nav">
-                    <li class="add-menu"><a href="#incidents">Browse Incidents</a></li>
+                    <li class="browse-menu"><a href="#incidents">Browse Incidents</a></li>
                     <li class="add-menu"><a href="#incidents/add"><i class="icon-edit icon-white"></i> Add Incident</a></li>
                 </ul>
 
