--- a/public/tpl/IncidentView.html
+++ b/public/tpl/IncidentView.html
@@ -1,57 +1,69 @@
 <div class="row-fluid">
 
-    <form class="form-horizontal span12">
+  <form class="form-horizontal span12">
 
-        <fieldset>
+  <fieldset>
 
-            <legend>Incident Details</legend>
-            <br/>
+      <legend>Incident Details</legend>
+      <br/>
 
-            <div class="row">
-                <div class="span8">
+      <div class="row">
+        <div class="span8">
 
-                    <div class="control-group">
-                        <label for="incidentId" class="control-label">Id:</label>
+          <div class="control-group">
+              <label for="incidentId" class="control-label">Id:</label>
 
-                        <div class="controls">
-                            <input id="incidentId" name="id" type="text" value="<%= _id === null ? '' : _id %>"
-                                   disabled/>
-                        </div>
-                    </div>
+              <div class="controls">
+                  <input id="incidentId" name="id" type="text" value="<%= _id === null ? '' : _id %>"
+                         disabled/>
+              </div>
+          </div>
 
-                    <div class="control-group">
-                        <label for="description" class="control-label">Description:</label>
-
-                        <div class="controls">
-                            <textarea id="description" name="description" style="width: 90%;" rows="6"><%= description
-                                %></textarea>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="span4">
-                    <div class="well" style="width: 180px;text-align: center;width:50%;margin: 0px auto;">
-                    </div>
-                </div>
-
+          <div class="control-group">
+            <label for="description" class="control-label">Description:</label>
+            <div class="controls">
+              <textarea id="description" name="description" style="width: 90%;" rows="6"><%= description %></textarea>
             </div>
+          </div>
 
-        </fieldset>
 
-        <div class="form-actions">
-            <a href="#" class="btn btn-primary save">Save</a>
-            <a href="#" class="btn delete">Delete</a>
+          <div class="control-group">
+            <label for="feeling" class="control-label">Feelings:</label>
+            <div class="controls feelings-controls">              
+              <input id="feelings" name="feelingsName" style="width: 90%;"><% feelings.feeling %></input>
+            </div>
+            <button class="addAnotherFeeling">add another</button>
+          </div>
+
+
+          <div class="control-group">
+            <label for="thoughts" class="control-label">Thoughts</label>
+            <div class="controls thoughts-controls">              
+              <input id="feelings" name="feelingsName" style="width: 90%;"><% thoughts.thought %></input>
+            </div>
+            <button class="addAnotherThought">add another</button>
+          </div>
+          
+
         </div>
 
-    </form>
+      </div>
+
+  </fieldset>
+
+  <div class="form-actions">
+      <a href="#" class="btn btn-primary save">Save</a>
+      <a href="#" class="btn delete">Delete</a>
+  </div>
+
+  </form>
 
 </div>
 
 <div class="row-fluid status-bar">
-    <div class="span12">
-        <div class="alert alert-success" style="display: none">
-            <b>Success!</b> Incident saved successfully
-        </div>
-    </div>
+  <div class="span12">
+      <div class="alert alert-success" style="display: none">
+          <b>Success!</b> Incident saved successfully
+      </div>
+  </div>
 </div>
