--- a/public/tpl/IncidentView.html
+++ b/public/tpl/IncidentView.html
@@ -30,7 +30,7 @@
           <div class="control-group">
             <label for="feeling" class="control-label">Feelings:</label>
             <div class="controls feelings-controls">              
-              <input id="feelings" name="feelingsName" style="width: 90%;"><% feelings.feeling %></input>
+              <input id="feelings" name="feelingsName" style="width: 90%;"><%= feelings %></input>
             </div>
             <button class="addAnotherFeeling">add another</button>
           </div>
@@ -39,7 +39,7 @@
           <div class="control-group">
             <label for="thoughts" class="control-label">Thoughts</label>
             <div class="controls thoughts-controls">              
-              <input id="feelings" name="feelingsName" style="width: 90%;"><% thoughts.thought %></input>
+              <input id="feelings" name="feelingsName" style="width: 90%;"><%= thoughts %></input>
             </div>
             <button class="addAnotherThought">add another</button>
           </div>
