added complete sample incident to populate db

--- a/public/tpl/IncidentView.html
+++ b/public/tpl/IncidentView.html
@@ -30,8 +30,9 @@
           <div class="control-group">
             <label for="feeling" class="control-label">Feelings:</label>
             <div class="controls feelings-controls">              
-              <input id="feelings" name="feelingsName" style="width: 90%;"><%= feelings %></input>
+              <input id="feelings" name="feelings" style="width: 90%;"></input>
             </div>
+
             <button class="addAnotherFeeling">add another</button>
           </div>
 
@@ -39,7 +40,7 @@
           <div class="control-group">
             <label for="thoughts" class="control-label">Thoughts</label>
             <div class="controls thoughts-controls">              
-              <input id="feelings" name="feelingsName" style="width: 90%;"><%= thoughts %></input>
+              <input id="thoughts" name="thoughts" style="width: 90%;"><%= thoughts %></input>
             </div>
             <button class="addAnotherThought">add another</button>
           </div>
