--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
 <script src="lib/jquery-1.8.2.min.js"></script>
 <script src="lib/underscore-min.js"></script>
 <script src="lib/backbone-min.js"></script>
+<script src="lib/backbone-relational-0.7.0.js"></script>
 <script src="lib/bootstrap.min.js"></script>
 
 <script src="js/utils.js"></script>
